@@ -371,9 +371,9 @@ Goals of this implementation are:
 
 =head2 Current status
 
-Current release implements almost all tags and filters documented on Django site.
+Current release implements almost all tags and filters documented on Django site. Also, some extensions has been made to the tags, filters and operators.
 
-There are no significant speed optimizations done yet.
+Some optimisation has been done and some critical section been implemeted in C.
 
 Internationalization and localization are not yet implemented.
 
@@ -663,7 +663,7 @@ Simple tags should be inherited from C<DTL::Fast::Tag::Simple> and should looks 
         return $self;       # IMPORTANT, method must return $self, because it's being used in chain call
     }
 
-    # Rendering method. Invoked on every rendering.
+    # Rendering method. Invoked on every rendering iteration
     # The main work is being done here
     sub render
     {
@@ -684,9 +684,92 @@ After creating your tag class, you need to register it in C<DTL::Fast>, so libra
 
     register_tag( 'my_tag' => 'CustomTags::MyTag' );
     
-Basically, that's all. 
+Basically, that's all. For more information you may view through the sources of buit-in simple tags.
 
 =head2 Block tags
+
+Block tags are little more complicated than simple tags described above.
+
+    package CustomTags::MyBlockTag;                     # your tag class
+    use strict; use utf8; use warnings FATAL => 'all';  # make a clean code
+    use parent 'DTL::Fast::Tag';                        # parent class is Tag, not Tag::Simple
+    
+    $DTL::Fast::TAG_HANDLERS{'my_block_tag'} = __PACKAGE__;   # register your tag opening keyword with your package in tag handlers
+
+    # constructor and parameters parser are the same as in simple tags    
+
+    # method must be defined and must return block close tag, so parser would know where block is ended    
+    sub get_close_tag{ return 'end_my_tag';}
+    
+    # optional. Method invoked on parsing phase with next parsed chunk of current block tag contents
+    # this method being used, for example, in the 'if' tag to push chunks into sub-branches, not if block itself
+    sub add_chunk
+    {
+        my(
+            $self,      # reference to the tag object
+            $chunk      # parsed chunk object, if chunk must be ignored, it would be undefined
+        ) = @_;
+        
+        ... here you may alter chunk or put it in some other place, like subblocks...
+        
+        return $self;   # don't forget to return self
+    }
+    
+    # optional. Method invoked on parsing phase for every {% ... .%} construction.
+    # if there is no special controlling keywords, don't override this method
+    sub parse_tag_chunk
+    {
+        my(
+            $self,      # reference to the tag object
+            $tag_name,  # tag keyword
+            $tag_param  # everything after tag keyword (constructor's $parameter)
+        ) = @_;
+        
+        my $result;
+        
+        # here you may interpret additional tag keywords, like else, elsif and so on.
+        if( $tag_name eq 'my_tag_else' )
+        {
+            ... do smth special 
+        }
+        elsif( $tag_name eq 'my_tag_alternative_end' )
+        {
+            $self->{'raw_chunks'} = []; # this construction ends current block parsing
+        }
+        else    # if it was not special keyword, just do regular work
+        {
+            $result = $self->SUPER::parse_tag_chunk($tag_name, $tag_param);
+        }
+        
+        return $result;  # result must be a generated chunk or undef if there is no one
+    }
+
+    # Rendering method. Invoked on every rendering iteration
+    # The main work is being done here
+    sub render
+    {
+        my(
+            $self,          # object reference
+            $context,       # context object
+            $global_safe    # this flag is set to true, if somehow global safety is turned on, means disabled HTML escaping
+        ) = @_;
+        
+        ...
+        
+        my $result = $self->SUPER::render($context, $global_safe);   # in order to render current block contents, invoke the parent renderer
+        
+        ...
+        
+        return $result;     # this is just a string generated by tag. If your tag is silent, just return an empty string
+    }
+
+After creating your tag class, you need to register it in C<DTL::Fast>, so library knew which module to load on tag keyword:
+
+    use DTL::Fast qw(register_tag);
+
+    register_tag( 'my_block_tag' => 'CustomTags::MyBlockTag' );
+    
+Basically, that's all. For more information you may view through the sources of buit-in block tags.
 
 =head1 CUSTOM FILTERS
 
@@ -695,8 +778,6 @@ To do...
 =head1 CUSTOM OPERATORS
 
 To do...
-
-
 
 =head1 INCOMPATIBILITIES WITH DJANGO TEMPLATES
 
